<resources>
    <string name="app_name">Weather App</string>
    <string name="location">Location</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="_17">17°C</string>
    <string name="updated">updated</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
    <string name="sunrise">sunrise</string>
</resources>